[package]
name = "lucyrobillard-html-generator"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
quick-xml = { version = "0.26.0", features = [ "serialize" ] }
serde = { version = "1.0.149", features = ["derive"] }
